all but arch in draft form

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,6 +80,13 @@ title = "{VeriSmart} benchmark",
   year={2008}
 }
 
+@inproceedings{slitherpaper,
+  author = "Josselin Feist and Gustavo Greico and Alex Groce",
+  title = "Slither: A Static Analysis Framework For Smart Contracts",
+  year = 2019,
+  booktitle = "International Workshop on Emerging Trends in Software Engineering for Blockchain",
+  }
+
 @misc{parity,
   title={Parity Ethereum client},
   author={Parity},
@@ -207,6 +214,13 @@ title = "{VeriSmart} benchmark",
   year={2018}
 }
 
+@misc{aflfuzz,
+  title = "american fuzzy lop (2.35b)",
+  author = "Michal Zalewski",
+  howpublished = "\url{http://lcamtuf.coredump.cx/afl/}",
+  note = "Accessed December 20, 2016"
+}
+
 @inproceedings{ClaessenH00,
 author    = {Koen Claessen and
            John Hughes},
@@ -268,6 +282,56 @@ bibsource = {DBLP, http://dblp.uni-trier.de}
   howpublished="\url{https://github.com/b-mueller/solfuzz}",
   author = "Bernhard Mueller"
   }
+
+@inproceedings{Pacheco,
+  author = "Carlos Pacheco and Shuvendu K. Lahiri and Michael D. Ernst and Thomas Ball",
+  title = "Feedback-directed Random Test Generation",
+  booktitle = "International Conference on Software Engineering",
+  year = "2007",
+  pages = "75--84"
+}
+
+@inproceedings{lemieux2018perffuzz,
+  title={Perffuzz: Automatically generating pathological inputs},
+  author={Lemieux, Caroline and Padhye, Rohan and Sen, Koushik and Song, Dawn},
+  booktitle={Proceedings of the 27th ACM SIGSOFT International Symposium on Software Testing and Analysis},
+  pages={254--265},
+  year={2018}
+}
+
+@article{swarmIEEE,
+  author = "Gerard Holzmann and Rajeev Joshi and Alex Groce",
+  title = "Swarm Verification Techniques",
+  journal = "IEEE Transactions on Software Engineering",
+volume = {37},
+number = {6},
+  year = 2011,
+  pages = "845--857"
+}
+
+
+@inproceedings{ASE08,
+  author = "James H. Andrews and Alex Groce and Melissa Weston and Ru-Gang Xu",
+  title = "Random Test Run Length and Effectiveness",
+  booktitle = "Automated Software Engineering",
+pages = "19--28",
+  year = 2008
+}
+
+@inproceedings{ISSTA12,
+  author = "Alex Groce and Chaoqiang Zhang and Eric Eide and Yang Chen and John Regehr",
+  title = "Swarm Testing",
+  booktitle = "International Symposium on Software Testing and Analysis",
+  year = 2012,
+  pages = "78--88"
+}
+
+
+@book{SPIN,
+  author="Gerard J. Holzmann",
+  title="The {SPIN} Model Checker: Primer and Reference Manual",
+  publisher="Addison-Wesley Professional",
+  year="2003"}
 
 @misc{chainfuzz,
   howpublished="\url{https://github.com/ChainSecurity/ChainFuzz}",
