--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,1 +1,5 @@
-\section{Conclusion}
+\section{Conclusions and Future Work}
+
+Echidna is an effective, usable, and \emph{fast} fuzzer for Ethereum blockchain smart contracts.  Echidna aims to provide a potent out-of-the-box fuzzing experience, with little setup or preparation required by users, but allows for considerable customization.  Echidna supports assertion checking, custom property-checking, and estimation of maximum gas usage, a core feature set based on experience with security audits of contracts.  The default test generation parameters of Echidna have been tuned using hands-on experience in audits and via benchmark experiments and mutation analysis.  In our experiments, Echidna outperformed a comparable fuzzer using sophisticated techniques:  Echidna detected, in less than two minutes, many reachability targets that required 15 or more minutes with {\tt solfuzz}, on both benchmark contracts and the real-world Tether token.
+
+Echidna is under heavy active development.  Recently added or in-progress features include gas estimation, test corpus collection, integration of Slither static analysis information, and improved mutation for feedback-driven fuzzing.  One near-future goal is to add a driver mode, similar to the swarm tool \cite{swarmIEEE}  for the SPIN model checker \cite{SPIN}, to make better use of configuration diversity, including swarm testing \cite{ISSTA12}, to better exploit multicore machines.  In particular, this mode will enable Echidna to produce much more accurate maximum gas usage estimates.
