--- a/experiments.tex
+++ b/experiments.tex
@@ -1,6 +1,6 @@
 \section{Experimental Evaluation}
 
-In order to evaluate Echidna, we compared its performance to the MythX platform \cite{mythx}, accessed via the {\tt solfuzz} \cite{solfuzz} interface, on a set of reachability targets, produced by insertion of {\tt assert(false)} statements, on a set of benchmark contracts \cite{vsbenchmark} produced for the VeriSmart safety-checker \cite{VeriSmart}.  We compared to MythX as it was the only other currently-working fuzzer we are aware of that easily supports arbitrary reachability targets (via supporting assertion-checking).  Comparing with a fuzzer that only supports a custom set of built-in detectors, such as ContractFuzzer \cite{contractfuzzer}, which does not support arbitrary assertions in Solidity code, is difficult to do in a fair way, as any differences are likely to be due to specification semantics, not exploration capability.  ChainFuzz, which in theory offers this capability, unfortunately fails to run on our examples, or its own provided sample contract, terminating with the message: {\tt panic: error unmarshalling transaction: json: cannot unmarshal string into Go struct field transaction.gas of type uint64}, when run inside the docker image it creates.  The last commit was in April of 2019, and it is not clear if the tool is maintained, since the same problem that we encountered was submitted as a github issue in April of 2019:  \url{https://github.com/ChainSecurity/ChainFuzz/issues/2}.
+In order to evaluate Echidna, we compared its performance to the MythX platform \cite{mythx}, accessed via the {\tt solfuzz} \cite{solfuzz} interface, on a set of reachability targets, produced by insertion of {\tt assert(false)} statements, on a set of benchmark contracts \cite{vsbenchmark} produced for the VeriSmart safety-checker \cite{VeriSmart}.  We compared to MythX as it was the only other currently-working fuzzer we are aware of that easily supports arbitrary reachability targets (via supporting assertion-checking).  Comparing with a fuzzer that only supports a custom set of built-in detectors, such as ContractFuzzer \cite{contractfuzzer}, which does not support arbitrary assertions in Solidity code, is difficult to do in a fair way, as any differences are likely to be due to specification semantics, not exploration capability.  ChainFuzz \cite{chainfuzz}, which in theory offers this capability, unfortunately fails to run on our examples, or its own provided sample contract, terminating with the message: {\tt panic: error unmarshalling transaction: json: cannot unmarshal string into Go struct field transaction.gas of type uint64}, when run inside the docker image it creates.  The last commit was in April of 2019, and it is not clear if the tool is maintained, since the same problem that we encountered was submitted as a github issue in April of 2019:  \url{https://github.com/ChainSecurity/ChainFuzz/issues/2}.
 
 MythX is a commercial platform for analyzing smart contracts.  It offers a free tier of access, and, via the {\tt solfuzz} tool, this makes it possible to easily run assertion checking on contracts, with ease-of-use similar to Echidna.  The primary differences to a user are that {\tt solfuzz}/MythX does not work offline, and there is limit of 40 runs/month and 5 minutes of compute time for the free tier.  The {\tt solfuzz} tool runs a short-duration analysis, that in our experiments took about two minutes, with an upper bound of 5 minutes, that is available for non-paying users (it can also run 20 minute or 45 minute analyses for users with paid MythX accounts).  MythX analyzes the submitted contracts using the Mythril symbolic execution tool \cite{mythril-code} and the Harvey fuzzer \cite{harvey}.  Harvey is a state-of-the-art closed-source tool, with a research paper describing its design and implementation in ICSE 2020 \cite{harvey}.
 
@@ -25,6 +25,7 @@ if (balances[\_from] >= \_amount
   \label{fig:code}
   \end{figure}
 
-Figure \ref{fig:code} shows the key part of the code for one of the four targets Echidna, but not {\tt solfuzz}/MythX (even with additional runs), was able to reach within 2 minutes.  The assert can only be executed when a call has been made to the {\tt approve} function, allowing the sender of the {\tt transferFrom} call to send an amount greater than or equal to {\tt \_amount}, and when  the contract from which transfer is to be made has a token balance greater than {\tt \_amount}.  Generating a sequence with the proper set of functions called and the proper relationships between variables is a difficult problem, but Echidna's heuristic use of small numeric values in arguments and heuristic repetiton of addresses in arguments and as message senders is able to navigate the set of constraints easily.  A similar set of constraints over allowances and/or senders and function arguments is involved in two of the other four targets where Echidna performs better.
+  Figure \ref{fig:code} shows the key part of the code for one of the four targets Echidna, but not {\tt solfuzz}/MythX (even with additional runs), was able to reach within 2 minutes.  The assert can only be executed when a call has been made to the {\tt approve} function, allowing the sender of the {\tt transferFrom} call to send an amount greater than or equal to {\tt \_amount}, and when  the contract from which transfer is to be made has a token balance greater than {\tt \_amount}.  Generating a sequence with the proper set of functions called and the proper relationships between variables is a difficult problem, but Echidna's heuristic use of small numeric values in arguments and heuristic repetiton of addresses in arguments and as message senders is able to navigate the set of constraints easily.  A similar set of constraints over allowances and/or senders and function arguments is involved in two of the other four targets where Echidna performs better.
 
-
+For a larger, more realistic example, we modified the actual blockchain code for the TetherToken contract (\url{https://etherscan.io/address/0xdac17f958d2ee523a2206206994597c13d831ec7#code}), and again inserted {\tt assert(false)} targets to investigate reachability of the code.  Tether is arguably the most famous ``stablecoin'', a cryptocurrency pegged to a real-world currency, in this case the US dollar, and has a market cap of approximately 6 billion dollars.  The contract has been involved in more than 23 million blockchain transactions.
+We again randomly selected 40 targets, and ran two minutes of testing on each with {\tt solfuzz} and Echidna.  Echidna was able to reach 26 of the 40 targets, with mean and median runtimes of 32 and 27 seconds.  The longest run required 83 seconds.  On the other hand, {\tt solfuzz}/MythX was only able to reach one of the targets using the quick two-minute search (and the search only took 44 seconds).   The target was one that Echidna failed to detect.
