--- a/introduction.tex
+++ b/introduction.tex
@@ -12,3 +12,5 @@ The use of Echidna in internal audits is a key driver in three primary design go
 \end{enumerate}
 
 The third design goal is, in our experience, essential for supporting the first two design goals.  Quick turnaround makes it practical to apply a tool during development, and makes tuning user-defined properties easy; if every run requires even 10 minutes to produce useful results, incremental improvement of properties is painful and inefficient.  This is why most property-based testing tools have a very small default runtime or number of tests.  Speed also makes use of a tool in CI (\url{https://crytic.io}) more practical. Finally, effectiveness can be more easily improved if turnaround is usually quick: a fast fuzzer can be tuned using mutation testing \cite{MutationSurvey} or experimental runs using a large set of configurations on a large set of benchmark contracts.  The size of the statistical basis for decision-making and parameter choices explored is directly limited by the runtime of the tool.  Of course, Echidna supports long runtimes:  there is no upper bound on how long Echidna can execute, and with coverage-based feedback there is a long-term improvement in test generation quality.  Nonetheless, Echidna aims to find most problems it can detect in a matter of minutes, preferably fewer than five minutes.
+
+Fuzzing smart contracts introduces some challenges that are unusual for fuzzer development.  First, a large amount of engineering effort is required to faithfully represent the semantics of blockchain execution; this is a different challenge than executing instrumented native binaries.  Second, the core problem, rather than generation of arbitrary byte buffers, is one of transaction sequence generation, which is more akin to the problem of unit test generation \cite{Pacheco} than traditional fuzzing.  This makes it critically important to choose parameters such as the length of sequences \cite{ASE08} that are not normally as important in fuzzing or in single-value-generation as in Haskell's QuickCheck.  Finally, in the smart contract context, finding inputs that cause pathological execution times is not an exotic, unusual concern, as in traditional fuzzing \cite{lemieux2018perffuzz}.  Execution on the blockchain requires use of \emph{gas}, which has a price in cryptocurrency; inefficiency can be costly, and malicious inputs can lock a contract by making all transactions require more gas than a transaction is allowed to use.  Therefore producing \emph{quantitative} output of maximum gas usage is an important fuzzer feature, alongside more traditional correctness checks.
