just missing arch, final experiments

--- a/relatedwork.tex
+++ b/relatedwork.tex
@@ -1,3 +1,3 @@
 \section{Related Work}
 
-Echidna inherits concepts from property-based fuzzing, first popularized by the QuickCheck tool \cite{ClaessenH00} and from coverage-driven fuzzing, perhaps best known via the American Fuzzy Lop tool \cite{aflfuzz}.  Other fuzzers for Ethereum smart contracts include Harvey \cite{harvey}, ContractFuzzer \cite{contractfuzzer}, and ChainFuzz \cite{chainfuzz}.  We were unable to get ContractFuzzer to produce useful output within a four hour timeout, and ChainFuzz no longer appears to work.  Harvey is closed-source, but is usable via the MythX \cite{mythx} CI platform and the {\tt solfuzz} \cite{solfuzz} tool.  Echidna uses information from the Slither static analysis tool \cite{slitherpaper} that is not provided in the compiled API to guide creation of function calls.
+Echidna inherits concepts from property-based fuzzing, first popularized by the QuickCheck tool \cite{ClaessenH00} and from coverage-driven fuzzing, perhaps best known via the American Fuzzy Lop tool \cite{aflfuzz}.  Other fuzzers for Ethereum smart contracts include Harvey \cite{harvey}, ContractFuzzer \cite{contractfuzzer}, and ChainFuzz \cite{chainfuzz}.  We were unable to get ContractFuzzer to produce useful output within a four hour timeout, and ChainFuzz no longer appears to work.  Harvey is closed-source, but is usable via the MythX \cite{mythx} CI platform and the {\tt solfuzz} \cite{solfuzz} tool.  Echidna uses information from the Slither static analysis tool \cite{slitherpaper} (information not provided in the compiled ABI, such as which functions are guaranteed side-effect free, and which functions accept Ether payments) to guide creation of function calls.
