--- a/bibliography.bib
+++ b/bibliography.bib
@@ -291,6 +291,24 @@ bibsource = {DBLP, http://dblp.uni-trier.de}
   pages = "75--84"
 }
 
+@misc{albert2019gasol,
+    title={GASOL: Gas Analysis and Optimization for Ethereum Smart Contracts},
+    author={Elvira Albert and Jesús Correas and Pablo Gordillo and Guillermo Román-Díez and Albert Rubio},
+    year={2019},
+    eprint={1912.11929},
+    archivePrefix={arXiv},
+    primaryClass={cs.PL}
+}
+
+@misc{ma2019gasfuzz,
+    title={GasFuzz: Generating High Gas Consumption Inputs to Avoid Out-of-Gas Vulnerability},
+    author={Fuchen Ma and Ying Fu and Meng Ren and Wanting Sun and Zhe Liu and Yu Jiang and Jun Sun and Jiaguang Sun},
+    year={2019},
+    eprint={1910.02945},
+    archivePrefix={arXiv},
+    primaryClass={cs.CR}
+}
+
 @inproceedings{lemieux2018perffuzz,
   title={Perffuzz: Automatically generating pathological inputs},
   author={Lemieux, Caroline and Padhye, Rohan and Sen, Koushik and Song, Dawn},
