--- a/experiments.tex
+++ b/experiments.tex
@@ -28,4 +28,4 @@ if (balances[\_from] >= \_amount
   Figure \ref{fig:code} shows the key part of the code for one of the four targets Echidna, but not {\tt solfuzz}/MythX (even with additional runs), was able to reach within 2 minutes.  The assert can only be executed when a call has been made to the {\tt approve} function, allowing the sender of the {\tt transferFrom} call to send an amount greater than or equal to {\tt \_amount}, and when  the contract from which transfer is to be made has a token balance greater than {\tt \_amount}.  Generating a sequence with the proper set of functions called and the proper relationships between variables is a difficult problem, but Echidna's heuristic use of small numeric values in arguments and heuristic repetiton of addresses in arguments and as message senders is able to navigate the set of constraints easily.  A similar set of constraints over allowances and/or senders and function arguments is involved in two of the other four targets where Echidna performs better.
 
 For a larger, more realistic example, we modified the actual blockchain code for the TetherToken contract (\url{https://etherscan.io/address/0xdac17f958d2ee523a2206206994597c13d831ec7#code}), and again inserted {\tt assert(false)} targets to investigate reachability of the code.  Tether is arguably the most famous ``stablecoin'', a cryptocurrency pegged to a real-world currency, in this case the US dollar, and has a market cap of approximately 6 billion dollars.  The contract has been involved in more than 23 million blockchain transactions.
-We again randomly selected 40 targets, and ran two minutes of testing on each with {\tt solfuzz} and Echidna.  Echidna was able to reach 26 of the 40 targets, with mean and median runtimes of 32 and 27 seconds.  The longest run required 83 seconds.  On the other hand, {\tt solfuzz}/MythX was only able to reach one of the targets using the quick two-minute search (and the search only took 44 seconds).   The target was one that Echidna failed to detect.
+We again randomly selected 40 targets, and ran two minutes of testing on each with {\tt solfuzz} and Echidna.  Echidna was able to reach 28 of the 40 targets, with mean and median runtimes of 24 and 15 seconds, respectively.  The longest run required 103 seconds.  On the other hand, {\tt solfuzz}/MythX was unable to reach any of the targets using the quick/free two-minute search.   MythX/{\tt solfuzz} was able to detect the targets Echidna detected using the standard search, plus one additional reachability target.  The mean time required for detection, however, was almost 16 minutes.  The additional target reached by {\tt solfuzz} involves adding an address to a blacklist, then destroying the funds of that address.  Because an address can also be removed from a blacklist, there is no simple coverage-feedback to encourage avoiding this, and there are many functions to test, Echidna has trouble generating such a sequence.  However, using a prototype of a swarm testing \cite{ISSTA12} mode not yet included in the public release of Echidna, but briefly discussed in the conclusion below, we were able to produce such a sequence in less than five minutes.  Even without swarm testing, we were able to detect the problem in between 10 and 12 minutes, using a branch (to be merged in the near future) that incorporates more information from Slither, and uses some novel mutation strategies.  Of the 11 targets hit by neither tool, we manually determined that all but two are clearly actually unreachable.
