--- a/echidnademo.tex
+++ b/echidnademo.tex
@@ -39,7 +39,7 @@
 
 \begin{document}
 
-\title{Echidna: Effective and Usable Fuzzing for Smart Contracts}
+\title{Echidna: Effective, Usable, and Fast Fuzzing for Smart Contracts}
 
 \begin{CCSXML}
 <ccs2012>
